Twenty Twelve: remove overflow rule from wrapper element to allow image styles to spill out into margins. Fixes #21926. See also #21381.
git-svn-id: http://core.svn.wordpress.org/trunk@21918 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentytwelve/style.css
+++ b/wp-content/themes/twentytwelve/style.css
@@ -157,11 +157,14 @@ img {
 }
 
 /* Clearing floats */
-.clear:after {
+.clear:after,
+.wrapper:after {
 	clear: both;
 }
 .clear:before,
-.clear:after {
+.clear:after,
+.wrapper:before,
+.wrapper:after {
 	display: table;
 	content: "";
 }
@@ -462,9 +465,6 @@ a:hover {
 }
 
 /* Page structure */
-.wrapper {
-	overflow: hidden;
-}
 .site {
 	padding: 0 24px;
 	padding: 0 1.714285714rem;
